--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Divine India Tours and Travels</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<link rel="stylesheet"
   	href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -270,6 +270,6 @@
 	</section>
 
 	<!--link to js--->
-	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
